--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>lakshya</title>
 </head>
 <body>
-    <p>WE=elcome to my github Id</p>
+    <p>WE=elcome to my github</p>
     
 </body>
 </html>
